# AHRI_TRE_C.py

./: .gitignore  README.md  ahri_tre_cffi.py  pyproject.toml
src/ahri_tre_c/: __init__.py  core.py
tests/: test_core_wrapper.py
