[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahri-tre-c"
version = "0.1.1"
description = "Python bindings for AHRI TRE C core"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "AHRI" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
